Kubernetes/Teleport/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teleport-ingressroute
  namespace: teleport-cluster
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`teleport.xxxxxx.com`) || HostRegexp(`^.+\.teleport\.subdomain\.domain\.com$`)
      kind: Rule
      services:
        - name: teleport-cluster
          port: 443
          serversTransport: teleport-skip-verify
  tls:
    secretName: teleport-certificate-secret
    options:
      name: teleport-tls-options
      namespace: teleport-cluster
